功能：实现基于LangGraph的Text2SQL代理，具备混合检索、意图识别和SQL生成能力。

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ MYSQL_PASSWORD=obc@2017sz
 MYSQL_DATABASE=obc_cloud_crm
 
 # InfluxDB Configuration
-INFLUXDB_HOST=172.31.249.129
+INFLUXDB_HOST=172.31.120.129
 INFLUXDB_PORT=8086
 INFLUXDB_USER=readonly
 INFLUXDB_PASSWORD=obc@read2025
@@ -24,7 +24,7 @@ ES_USER=
 ES_PASSWORD=
 
 # Qdrant Configuration
-QDRANT_HOST=localhost
+QDRANT_HOST=127.0.0.1
 QDRANT_PORT=6333
 
 
