--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-langchain>=0.1.0
-langchain-openai>=0.0.5
+langchain>=0.2.0
+langchain-core>=0.2.0
+langchain-openai>=0.1.0
+langgraph>=0.2.0
+langchain-deepseek>=0.1.0
 openai>=1.0.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
